# stella2

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  nginx.conf  supervisord.conf
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-env-example.txt  task-1-justfile-list.txt  task-1-summary.md  task-1-verification.txt  task-2-deps-install.txt  task-2-health-endpoint.txt  task-2-structure.txt  task-2-summary.txt  task-3-build.txt  task-3-pnpm-install.txt  task-3-structure.txt  task-3-summary.txt  task-4-mypy.txt  task-4-ruff.txt  task-5-tsc.txt  task-6-compose-config.txt  task-6-summary.txt
.sisyphus/notepads/stella-app/: learnings.md
.sisyphus/plans/: stella-marketplace.md
backend/: Dockerfile  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  deps.py  main.py
backend/app/api/: catalog.py  categories.py  listings.py  router.py  users.py
backend/app/bot/: bot.py  handlers.py  webhook.py
backend/app/models/: __init__.py  category.py  listing.py  listing_photo.py  user.py
backend/app/schemas/: category.py  common.py  listing.py  user.py
backend/app/services/: redis.py  storage.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_catalog.py  test_categories.py  test_listings.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  (+4 more)
frontend/tests/: setup.ts
infra/nginx/: default.conf
(+36 files in other folders)
