[project]
name = "stella-backend"
version = "0.1.0"
description = "Stella Marketplace — Telegram Mini App Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.14",
    "aiogram>=3.17",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "redis[hiredis]>=5.2",
    "minio>=7.2",
    "granian[uvloop]>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-redis>=4.6",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-redis>=4.6",
    "aiosqlite>=0.20",
]
